<resources>
    <string name="app_name">MastSee</string>
    <string name="title_movies">Movies</string>
    <string name="title_tv_shows">TV Shows</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Search</string>
    <string name="search_hint_movie">Enter Movie Title</string>
    <string name="search_hint_tv">Enter Tv Shows Title</string>
    <string name="change_language">Change Language</string>
    <string name="mastsee">MastSee</string>
    <string name="image_banner_upcoming_movies">Image banner upcoming movies</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular Movies</string>
    <string name="image_cover_movies">Image Cover Movies</string>
    <string name="background_cover">background cover</string>
    <string name="top_movies">Top Movies</string>
    <string name="see_more">See More</string>
    <string name="popular_tv_shows">Popular Tv Shows</string>
    <string name="top_tv_shows">Top Tv Shows</string>
    <string name="overview">Overview</string>
    <string name="vote_count">Vote Count</string>
    <string name="original_language">Original Language</string>
    <string name="original_title">Original Title</string>
    <string name="popularity_point">Popularity Point</string>
    <string name="connection_error">Oops! There seems to be a problem, please check your internet connection again.</string>
    <string name="not_found">Oops! The movies and TV Shows you are looking for are playing hide and seek, please search using other keywords to be able to find them and make sure connected to internet.</string>
    <string name="banner">Banner Backdrop Film/TvShows</string>
    <string name="banner_user_score">Banner User Score</string>
    <string name="poster_film_tv_shows">Poster Film/Tv Shows</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="delete_all_favorite">Delete All Favorite</string>
    <string name="are_you_sure">Are you sure you want to delete all favorite lists?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="favorite_deleted">All your favorite lists have been deleted</string>
    <string name="favorited">you have added in Favorite List</string>
    <string name="unfavorited">you have deleted the Favorite List</string>
    <string name="you_haven_t_added_anything_to_the_favorites_list_yet_let_s_start_adding_movies_and_tv_shows_that_you_like">You haven\'t added anything to the Favorites list yet. Let\'s start adding Movies and Tv Shows that you like.</string>
    <string name="no_data">Favorite List Not Found</string>
    <string name="favorite_movie_list">Favorite Movie List</string>
    <string name="tv_favorite_list">Tv Favorite List</string>
    <string name="content_title_reminder">Well .. sure do not want a check today?</string>
    <string name="content_title_release_reminder">Want to check new movie today ?</string>
    <string name="content_text_reminder">Come on, open it again here, get information related to the latest movies and tv shows today.</string>
    <string name="sub_text_reminder">Daily Reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="has_been_release_today">has been released today. Check it out !</string>
    <string name="key_daily">daily</string>
    <string name="key_release">release</string>
    <string name="setting_reminder">Setting Reminder</string>
    <string name="summary_off_reminder">Don\'t miss any new movie releases every 8 o\'clock in the morning.</string>
    <string name="summary_on_reminder">Reminder is active, new movie notifications will be reminded every 8 o\'clock in the morning.</string>
    <string name="summary_off_daily">Afraid to forget to check a movie? Activate to remind you every 7 o\'clock in the morning.</string>
    <string name="summary_on_daily">You will be reminded to stay tune every 7 o\'clock in the morning.</string>
    <string name="no_movies_today">There is no movie release today.</string>
    <string name="reminder_activated">Reminder has been activated</string>
    <string name="reminder_deactivated">Reminder has been deactivated</string>
    <string name="about">About</string>
    <string name="dibuat_oleh">Dibuat oleh :</string>
    <string name="syekh_syihabuddin_azmil_umri">Syekh Syihabuddin Azmil Umri</string>
    <string name="_1710631170023">1710631170023</string>
    <string name="semua_data_dalam_aplikasi_ini_digunakan_untuk_tujuan_berbagi_informasi_di_bawah_ketentuan_penggunaan_yang_adil_semua_data_berupa_deskripsi_rating_gambar_yang_diambil_dari_tmdb_api_digunakan_milik_masing_masing_pemilik"><![CDATA[Semua data dalam aplikasi ini digunakan untuk tujuan berbagi informasi di bawah ketentuan penggunaan yang adil. Semua data berupa deskripsi, rating, & gambar yang diambil dari TMDB API digunakan milik masing-masing pemilik.]]></string>
</resources>
