<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="daily"
        android:title="@string/daily_reminder"
        android:summaryOff="@string/summary_off_daily"
        android:summaryOn="@string/summary_on_daily"
        app:iconSpaceReserved="false"/>

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/key_release"
        android:title="@string/release_reminder"
        android:summaryOff="@string/summary_off_reminder"
        android:summaryOn="@string/summary_on_reminder"
        app:iconSpaceReserved="false"/>

</android.support.v7.preference.PreferenceScreen>