<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <group android:menuCategory="container">
        <item android:id="@+id/change_language"
            android:title="@string/change_language"
            app:showAsAction="never"
            />
        <item android:id="@+id/setting_reminder"
            android:title="@string/setting_reminder"
            app:showAsAction="never"/>

        <item android:id="@+id/about"
            android:title="@string/about"
            app:showAsAction="never"/>
    </group>
</menu>